#1575 WIP - making nav align and fixing the file's white spacing

--- a/less/nav.less
+++ b/less/nav.less
@@ -1,124 +1,136 @@
 @import "deck/common";
 
 nav {
-    background: #262626;
-    position: fixed;
-    max-height: 70px;
-    top: 0;
-    z-index: 600;
-    width: 100%;
-    &.workspace-nav {
-        border-bottom: 1px #ccc solid;
-    }
+  background: #262626;
+  position: fixed;
+  max-height: 70px;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 600;
+  width: 100%;
 
-    .header {
-        height: 70px;
-        .nav-icon {
-            width: 80px;
-            text-align: center;
-            vertical-align: middle;
-            display: inline-block;
-            padding-top: 10px;
-            a {
-                font-size: 22px;
-                color: #fff;
-                display: block;
-                &:hover {
-                    opacity: 1;
-                }
-            }
-        }
+  &.workspace-nav {
+    border-bottom: 1px #ccc solid;
+  }
 
-        .nav-logo {
-            img {
-                /* fix for IE */
-                width: 140px;
-                height: 60px;
-            }
-            height: 70px;
-            padding-left: 24px;
-            margin-left: -5px;
-            display: inline-block;
-            vertical-align: middle;
-            div {
-                display: inline-block;
-                color: white;
-                font-size: 28px;
-                padding-top: 12px;
-                padding-left: 6px;
-                vertical-align: middle;
-            }
-        }
+  .header {
+    height: 70px;
 
-        .workspace-name, .search {
-            display: inline-block;
-            margin-left: 24px;
-            vertical-align: middle;
-            width: ~"calc(100% - 250px - 230px)";
-            max-width: 800px;
-        }
+    .nav-icon {
+      width: 80px;
+      text-align: center;
+      vertical-align: middle;
+      display: inline-block;
+      padding-top: 10px;
 
-        .workspace-name {
-            width: ~"calc(100% - 320px)";
-            max-width: 1000px;
-            display: inline-block;
-            color: #f0f0f0;
-            font-size: 28px;
-            padding-top: 10px;
-            &:hover {
-                color: #fff;
-            }
-
-            input {
-                padding: 0;
-                width: 100%;
-                outline: none;
-                background: none;
-                border: none;
-                line-height: 100%;
-            }
-        }
-    }
-
-    .header-menu {
+      a {
+        font-size: 22px;
+        color: #fff;
         display: block;
-        border-top: 1px solid #fff;
-        line-height: 40px;
-        list-style: none;
-        padding: 0;
-        > li {
-            float: left;
-            > a {
-                color: #9d9d9d;
-                display: block;
-                padding: 0 15px;
-                &:hover {
-                    color: #fff;
-                    text-decoration: none;
-                }
-            }
-        }
 
-        ul.dropdown-menu {
-            margin-top: -1px;
-            border-top-left-radius: 0;
-            border-top-right-radius: 0;
+        &:hover {
+          opacity: 1;
         }
+      }
     }
+
+    .nav-logo {
+      height: 70px;
+      padding-left: 24px;
+      margin-left: -5px;
+      display: inline-block;
+      vertical-align: middle;
+
+      img {
+        /* fix for IE */
+        width: 140px;
+        height: 60px;
+      }
+
+      div {
+        display: inline-block;
+        color: white;
+        font-size: 28px;
+        padding-top: 12px;
+        padding-left: 6px;
+        vertical-align: middle;
+      }
+    }
+
+    .workspace-name, .search {
+      display: inline-block;
+      margin-left: 24px;
+      vertical-align: middle;
+      width: ~"calc(100% - 250px - 230px)";
+      max-width: 800px;
+    }
+
+    .workspace-name {
+      width: ~"calc(100% - 320px)";
+      max-width: 1000px;
+      display: inline-block;
+      color: #f0f0f0;
+      font-size: 28px;
+      padding-top: 10px;
+
+      &:hover {
+        color: #fff;
+      }
+
+      input {
+        padding: 0;
+        width: 100%;
+        outline: none;
+        background: none;
+        border: none;
+        line-height: 100%;
+      }
+    }
+  }
+
+  .header-menu {
+      display: block;
+      border-top: 1px solid #fff;
+      line-height: 40px;
+      list-style: none;
+      padding: 0;
+
+      > li {
+        float: left;
+
+        > a {
+          color: #9d9d9d;
+          display: block;
+          padding: 0 15px;
+
+          &:hover {
+              color: #fff;
+              text-decoration: none;
+          }
+        }
+      }
+
+      ul.dropdown-menu {
+        margin-top: -1px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+  }
 }
 
 .header-gripper {
-    width: @grid-size;
-    height: @grid-size;
-    z-index: 999999;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    color: white;
-    text-align: center;
-    background: url(../img/gripper.svg) no-repeat center;
-    background-color: white;
-    transition: box-shadow 0.333s, background-color 0.333s;
+  width: @grid-size;
+  height: @grid-size;
+  z-index: 999999;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  text-align: center;
+  background: url(../img/gripper.svg) no-repeat center;
+  background-color: white;
+  transition: box-shadow 0.333s, background-color 0.333s;
 }
 
 .sd-header-gripper-opening,
